--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "version": "0.0.0",
   "dependencies": {
+    "@allindevelopers/vue-local-scope": "^0.2.2",
     "@cosmicds/vue-toolkit": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
