--- a/package.json
+++ b/package.json
@@ -50,6 +50,5 @@
     "lint": "vue-cli-service lint src --no-fix",
     "serve": "vue-cli-service serve"
   },
-  "name": "@cosmicds/tempo-lite",
-  "packageManager": "yarn@4.12.0"
+  "name": "@cosmicds/tempo-lite"
 }
