--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -102,7 +102,7 @@ jobs:
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
-        if: ${{ steps.draft.outputs.value }} == 'false'
+        if: ${{ steps.draft.outputs.value == 'false' }}
         with:
           branch: gh-pages
           folder: deployment 
