--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "stream": "^0.0.3",
     "uuid": "^11.1.0",
     "vue": "^3.4.15",
+    "vue-shepherd": "^6.0.0",
     "vuedraggable": "^4.1.0",
     "vuetify": "^3.4.11",
     "webpack-plugin-vuetify": "^2.0.0",
@@ -50,5 +51,6 @@
     "lint": "vue-cli-service lint src --no-fix",
     "serve": "vue-cli-service serve"
   },
-  "name": "@cosmicds/tempo-lab"
+  "name": "@cosmicds/tempo-lab",
+  "packageManager": "yarn@4.12.0"
 }
